--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <h3><a href="/">RIR360 Blog Sum</a></h3>
-                <span class="muted">- Blogs Summarized & Insights</span>
+                <span class="muted">Blogs Summarized & Insights</span>
             </div>
         </header>
     
