compact-ness update

--- a/blogs/sample.html
+++ b/blogs/sample.html
@@ -16,7 +16,7 @@
             </div>
         </header>
     
-        <div class="container overflow">
+        <div class="compact container overflow">
 
             <article class="blog-content">
                 <h1>Sample Blog Post</h1>
